changes in products and documentation
